tests/failing/test2.tail
let v1:<int>52 = catV{[int],[30,22]}(iotaV(30),iotaV(22)) in
let v3:<int>63 = catV{[int],[11,52]}([1,2,23,3,4,5,344,6,7,7,5],eachV{[int,int],[52]}(fn v2:[int]0 => addi(5,v2),v1)) in
i2d(reduce{[int],[0]}(fn v5:[int]0 => fn v6:[int]0 => maxi(v6,v5),0,dropV{[int],[60]}(3,eachV{[int,int],[63]}(fn v4:[int]0 => addi(5,v4),v3))))
